--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <table>
                     <tr>
                         <td><p>Slint is and was an exciting new development in the post-rock style that is now again revitalizing the rock music scene. Their first album <span>Spiderland</span> from 1991 has been unavailable in vinyl for years. We've had it reproduced. True stuff.</p>
-                            <p>We tracked down the band and made them sign album covers. So we have signed copies, but only for the first 20 customers &ndash; so hurry and get yours today! <a href="#">>> Go to shop</a></p></td>
+                            <p>Also, we tracked down the band and made them sign album covers. So we have signed copies, but only for the first 20 customers &ndash; so hurry and get yours today! <a href="#">>> Go to shop</a></p></td>
                         <td><img src="images/slint.jpg" alt="cover from first album, Spiderland, by Slint"></td>
                     </tr>
                 </table>
